# MRDC22

./: .gitignore  CameraColor.py  CameraMultipleColors.py  CannyEdge.py  ColorDetector.py  ColorDictionary.txt  ColorEuclideanDistance.py  FinalColorDetector.py  LICENSE  README.md  auto_shoot_logic.py  colors.py  test.py
State Machine/: State machine start.py
firmware/: balls.ino  drivetrain.ino  main.ino
firmware/balls/: balls.ino
firmware/drivetrain/: drivetrain.ino
firmware/v1/: main.ino
mrdc_ws/src/mrdc_core/: package.xml  setup.cfg  setup.py
mrdc_ws/src/mrdc_core/launch/: all_launch.xml
mrdc_ws/src/mrdc_estop/: package.xml  setup.cfg  setup.py
mrdc_ws/src/mrdc_estop/launch/: estop.xml
mrdc_ws/src/mrdc_estop/mrdc_estop/: estop.py
mrdc_ws/src/mrdc_example/: package.xml  setup.cfg  setup.py
mrdc_ws/src/mrdc_example/src/: publisher.py  subscriber.py
mrdc_ws/src/mrdc_gui/: package.xml  setup.cfg  setup.py
mrdc_ws/src/mrdc_gui/launch/: gui.xml
mrdc_ws/src/mrdc_gui/mrdc_gui/: main.py
mrdc_ws/src/mrdc_gui/mrdc_gui/templates/: index.html
mrdc_ws/src/mrdc_joy/: package.xml  setup.cfg  setup.py
mrdc_ws/src/mrdc_joy/launch/: all_launch.xml  joy.xml
mrdc_ws/src/mrdc_joy/mrdc_joy/: driver.py
mrdc_ws/src/mrdc_joy/src/: driver.py
mrdc_ws/src/mrdc_launch/: package.xml  setup.py
mrdc_ws/src/mrdc_launch/launch/: gui.xml  primary.xml  remote.xml  serial.xml
mrdc_ws/src/mrdc_msgs/: CMakeLists.txt  package.xml
mrdc_ws/src/mrdc_msgs/msg/: Motors.msg
mrdc_ws/src/mrdc_serial/: package.xml  setup.cfg  setup.py
mrdc_ws/src/mrdc_serial/launch/: remote.xml  remote_gui.xml  serial.xml  serialwithgui.xml
mrdc_ws/src/mrdc_serial/mrdc_serial/: driver.py  remote.py  serial.py
notes/: motor_controller.md
scripts/: build.sh  clean.sh
